--- a/src/regress/usr.bin/mandoc/mdoc/Bf/Makefile
+++ b/src/regress/usr.bin/mandoc/mdoc/Bf/Makefile
@@ -1,5 +1,13 @@
-# $OpenBSD: Makefile,v 1.4 2012/07/07 14:10:55 schwarze Exp $
+# $OpenBSD: Makefile,v 1.1 2012/07/09 18:55:40 schwarze Exp $
 
-REGRESS_TARGETS = nest
+REGRESS_TARGETS = nest break broken
+
+# groff-1.20.1 defect:
+#  - If a font block breaks another block,
+#    fonts get mixed up when the other block finally ends.
+
+SKIP_GROFF = break
+
+SKIP_TMAN = break broken
 
 .include <bsd.regress.mk>
